--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     
         
-        <script src="jquery-3.6.0.slim.js"></script>
+        <script src="jquery-3.6.0.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
