--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 
 
         <label for="InnerOffsetX">Inner Offset X (in pixels)</label>
-        <input type="number" id="InnerOffsetX" name="InnerOffsetX" value = 0>
+        <input type="number" id="InnerOffsetX" name="InnerOffsetX" value = 5->
 
 
         <label for="InnerOffsetY">Inner Offset Y (in pixels)</label>
-        <input type="number" id="InnerOffsetY" name="InnerOffsetY" value = 0>
+        <input type="number" id="InnerOffsetY" name="InnerOffsetY" value = -300>
 
 
         <br>
