--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
         <br>
 
         
-        <label for="ImageCount">Image Count</label>
-        <input id="ImageCount" name="ImageCount" value = 0 readonly=true disabled=true>
+        <label for="ImageCount">Images Needed</label>
+        <input type="number" id="ImageCount" name="ImageCount" value = 0 disabled>
+
+        <br>
 
         <button id="Loadimages">Load Images</button>
 
