allow multiple file upload

--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
 
         <br>
 
-        <button id="Loadimages">Load Images</button>
-
+        <input type="file" id="ImageFiles" multiple/>
     
         
         <script src="jquery-3.6.0.js"></script>
