--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
         <label for="InnerOffsetX">Inner Offset X (in pixels)</label>
-        <input type="number" id="InnerOffsetX" name="InnerOffsetX" value = 5->
+        <input type="number" id="InnerOffsetX" name="InnerOffsetX" value = 50>
 
 
         <label for="InnerOffsetY">Inner Offset Y (in pixels)</label>
