--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <input type="file" id="ImageFiles" multiple/>
     
         
-        <script src="jquery-3.6.0.js"></script>
+        <script src="jquery-3.6.0.slim.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
