brick like layout and image buffer reset

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
         <label for="InnerOffsetY">Inner Offset Y (in pixels)</label>
         <input type="number" id="InnerOffsetY" name="InnerOffsetY" value = -300>
 
+        
+        <label for="BrickLikeLayout">Brick Like Layout</label>
+        <input type="checkbox" id="BrickLikeLayout" name="BrickLikeLayout" value = "BrickLikeLayout" checked>
+
 
         <br>
         <br>
